# Practical-work-3

./: .gitignore  CMakeLists.txt  converter.cpp  converter.h  widget.cpp  widget.h  widget.ui
